--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.1.4",
+    "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -26,6 +27,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "uuid": "^8.2.0",
     "yup": "^0.29.1"
   },
   "devDependencies": {
