--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.1.4",
-    "lottie-react-native": "^3.5.0",
+    "lottie-react-native": "~2.6.1",
     "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
